Name:          zeroth
Version:       2008.10.28
Cabal-version: >= 1.6
License:       BSD3
License-file:  LICENSE
Maintainer:    Robin Green <greenrd@greenrd.org>
Build-type:    Simple
Copyright:     2005-2008 Lemmih <lemmih@gmail.com>, 2009 Robin Green <greenrd@greenrd.org>
Category:      Language
Synopsis:      ZeroTH - remove unnecessary TH dependencies
Description:   TemplateHaskell is fairly useful for generating new
               Haskell programs. This, however, incurs a dependency on
               TH on subsequent uses where none theoretically should exist.
               ZeroTH solves this by scanning a file for top-level TH
               declarations, evaluates them, removes TH imports, and outputs
               the resulting code.
Bug-reports:   mailto:greenrd@greenrd.org
Stability:     experimental
Tested-with:   GHC == 6.10.2

Source-repository head
    Type:      darcs
    Location:  http://patch-tag.com/publicrepos/zerothGreenrd

Library
    Build-depends:   base >= 4, haskell-src-exts >= 0.4.8, directory, process, syb, template-haskell
    Exposed-modules: Language.Haskell.TH.ZeroTH.Config, Language.Haskell.TH.ZeroTH.GetOpt, Language.Haskell.TH.ZeroTH, Language.Haskell.TH.ZeroTH.Helper, Language.Haskell.TH.ZeroTH.Comments
    Other-modules:   ListUtils
    GHC-options:     -Wall
    Hs-source-dirs:  src

Executable zeroth
    Build-depends:   base >= 4, haskell-src-exts >= 0.4.8, directory, process, syb, template-haskell
    Main-is:        Main.hs
    Other-modules:  Language.Haskell.TH.ZeroTH.Comments, ListUtils, Language.Haskell.TH.ZeroTH.Config, Language.Haskell.TH.ZeroTH.GetOpt, Language.Haskell.TH.ZeroTH, Language.Haskell.TH.ZeroTH.Helper
    GHC-options:    -Wall
    Hs-source-dirs: src
