Name:          zeroth
Version:       2009.6.23.3
Cabal-version: >= 1.8
License:       BSD3
License-file:  LICENSE
Maintainer:    Robin Green <greenrd@greenrd.org>
Build-type:    Custom
Copyright:     2005-2008 Lemmih <lemmih@gmail.com>, 2009 Robin Green <greenrd@greenrd.org>
Category:      Language
Synopsis:      ZeroTH - remove unnecessary TH dependencies
Description:   TemplateHaskell is fairly useful for generating new
               Haskell code. This, however, can incur a dependency on
               TH on subsequent uses where none theoretically should exist.
               ZeroTH solves this by scanning a file for top-level TH
               declarations, evaluates them, removes TH imports, and outputs
               the resulting code.
Bug-reports:   mailto:greenrd@greenrd.org
Stability:     experimental
Tested-with:   GHC == 6.10.3
Extra-tmp-files: ppsrc/Language/Haskell/TH/ZeroTH/GetOpt.hs
Extra-source-files: Language/Haskell/TH/ZeroTH/GetOpt.hs
Source-repository head
    Type:      darcs
    Location:  http://patch-tag.com/publicrepos/zerothDarcs2

Library
    Build-depends:   base >= 4 && < 5,
                     haskell-src-exts >= 1.14,
                     directory, 
                     process, 
                     syb,
                     template-haskell,
                     hskeleton >= 0.1 && < 0.2,
                     derive, 
                     monoid-record >= 0.1 && < 0.2,
                     Cabal,
                     filepath,
                     containers
    Exposed-modules: Language.Haskell.TH.ZeroTH.Config,
                     Language.Haskell.TH.ZeroTH.GetOpt, 
                     Language.Haskell.TH.ZeroTH,
                     Language.Haskell.TH.ZeroTH.Helper,
                     Language.Haskell.TH.ZeroTH.Comments,
                     Distribution.ZeroTH
    Other-modules:   ListUtils
    GHC-options:     -Wall
    Hs-source-dirs:  src

Executable zeroth
    Main-is:         Main.hs
    Build-depends:   base >= 4, base < 5,
                     syb, 
                     template-haskell,
                     zeroth
    GHC-options:     -Wall
    Hs-source-dirs:  .
